@@ -10,6 +10,7 @@ Version 0.3k
 * Fixed various typos and minor bugs caused by me changing stuff in the backend.
 * Added some sex exp/stat calls that were missing.
 * You can now visit Miranda's home for sexings during the hunting for Terry quest.
+* You can now repeat the Miranda sex scenes played during the planning stage of Terry's quest (ask her to go to the back room in the tavern).
 
 --------------------------------------------
              PREVIOUS VERSIONS
